# solana-c-sdk

./: .gitignore  Cargo.toml  README.md  build.sh  counter.json  test  test.c  test.sh  wallet_keypair.json  wallet_keypair_mint.json  wallet_keypair_recipient.json  wallet_keypair_recipient2.json
header/: counter_interface.c  solana_lib.h  solana_sdk.h
src/: client.rs  lib.rs  main.rs  smart_contract.rs  token.rs  transaction.rs  wallet.rs
tests/: sol_lib.h  sol_wallet.h
